@@ -38,16 +38,18 @@ print $doc->getDocumentElement->toString, "\n";
 print $doc->cloneNode(1)->toString, "\n";
 print(($doc->getElementsByTagName( "foo" ))[0]->toString, "\n");
 $root->appendChild( $doc->createTextNode( "bar" ));
-test(sub {$root->nodeName . "/" . $root->tagName . "\n"});
-test(sub {$root->getFirstChild->nodeName . "\n"});
+#test(sub {$root->nodeName . "/" . $root->tagName . "\n"});
+#test(sub {$root->getFirstChild->nodeName . "\n"});
 $root->setAttribute( 'foo', 'bar' );
-$attrs = $root->attributes;
-for(my $i = 0; $i < $attrs->length; $i++)
-{
-	my $attr = $attrs->item($i);
-	$attr->setValue( 'barbar' );
-	test(sub {$attr->name . "=" . $attr->value . "\n"});
-}
+$root->appendChild( $doc->createTextNode( undef ));
+test( sub { $root->toString . "\n" });
+#$attrs = $root->attributes;
+#for(my $i = 0; $i < $attrs->length; $i++)
+#{
+#	my $attr = $attrs->item($i);
+#	$attr->setValue( 'barbar' );
+#	test(sub {$attr->name . "=" . $attr->value . "\n"});
+#}
 
 # LibXML
 print "\n--XML::LibXML--\n\n";
@@ -71,6 +73,16 @@ for(my $i = 0; $i < $attrs->length; $i++)
 	test(sub {$attr->name . "=" . $attr->value . "\n"});
 }
 
+#my $subdoc = XML::LibXML->new->parse_file( "/tmp/index.xpage" );
+#$root->appendChild( $subdoc->documentElement );
+#print $doc->toString;
+#$root->appendChild( $root->cloneNode(0) );
+#print "<<<\n", $doc->toString, "<<<\n";
+
+#$root->appendChild( $doc->createTextNode( undef ));
+$root->setAttribute( 'foo', undef );
+test( sub { $root->toString . "\n" });
+
 # GDOME
 print "\n--XML::GDOME--\n\n";
 
@@ -92,6 +104,9 @@ for(my $i = 0; $i < $attrs->length; $i++)
 	$attr->setValue( 'barbar' );
 	test(sub {$attr->name . "=" . $attr->value . "\n"});
 }
+
+#$root->appendChild( $doc->createTextNode( undef ));
+#test( sub { $root->toString . "\n" });
 
 sub test
 {
